style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  transition: 0.5s;
}
body {
  font-family: "Lato", sans-serif;
}
/* banner-area */
.banner-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  width: 100%;
  height: 100vh;
  background: url(./images/donation0.jpg),
    linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-blend-mode: overlay;
}
.banner-content {
  width: 826px;
  height: 320px;
}
.banner-content h1 {
  font-style: normal;
  font-weight: 700;
  font-size: 4rem;
  line-height: 79px;
  color: #ffffff;
}
.banner-content p {
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  padding: 1rem;
  color: #ffffff;
}
.donate-button {
  text-decoration: none;
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  color: #ffffff;
  padding: 14px 12px;
  background: #ff5959;
  border-radius: 5px;
}
.donate-btn {
  margin-top: 1.5em;
}
/* end of banner area */

/* donate-today area */
.donate-today-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 40vh;

  padding: 2rem;
  margin-top: 5em;
}
.donate-today-content h2 {
  font-style: normal;
  font-weight: 700;
  font-size: 45px;
  line-height: 54px;

  color: #121212;
}
.donate-today-content p {
  width: 625px;
  height: 56px;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  color: #707070;
  margin-top: 1em;
}
#donate-amount-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;
  margin-bottom: 4.5em;
}
.amount {
  font-style: normal;
  font-weight: 700;
  font-size: 30px;
  line-height: 36px;
  color: #707070;
  margin: 10px 30px;
}
#amount-active {
  background: #ffeeee;
  border: 2px solid #ff5959;
  border-radius: 5px;
  color: #ff5959;
  padding: 20px 15px;
}
.amount-submit {
  text-align: center;
  margin-bottom: 5em;
}
.value-submit {
  border: none;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  outline: none;
}
/* end of donate-today area */

/* our donate plan area */
.donate-today-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 40vh;
  padding: 2rem;
  margin-top: 6em;
}
.donate-today-content h2 {
  font-style: normal;
  font-weight: 700;
  font-size: 45px;
  line-height: 54px;

  color: #121212;
}
.donate-today-content p {
  width: 625px;
  height: 56px;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  color: #707070;
  margin-top: 1em;
}
.donate-card-container {
  width: 100%;
  flex-wrap: wrap;

  display: flex;
  justify-content: space-evenly;
  margin-bottom: 10em;
}
.card {
  min-width: 360px;
  min-height: 352px;
  background: rgba(79, 157, 166, 0.1);
  border-radius: 5px;
  padding: 30px 20px;
}
.card img {
  width: 58.13px;
  height: 49.77px;
}
.card-details {
  width: 315px;
  height: 153px;
  padding: 10px;
}
.card-details h3 {
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 36px;
  color: #121212;
  margin-top: 0.8em;
}
.card-details p {
  width: 315px;
  height: 101px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #707070;
  margin-top: 0.8em;
}
#card-2 {
  background: rgba(255, 89, 89, 0.1);
  box-shadow: 0px 15px 12px 3px rgba(250, 215, 215, 0.75);
}
#card-3 {
  background: #fff4d6;
}
/* end of our donate plan area */

/* volunteer area */
.volunteer-container {
  display: flex;
  justify-content: space-evenly;

  width: 100%;
  height: 70vh;
  margin-bottom: 4em;

  padding-left: 2.5rem;
}
.vol-left-area {
  background: url(./images/voulentear.jpg), rgba(249, 168, 168, 0.75);
  background-repeat: no-repeat;
  background-blend-mode: overlay;
  border-radius: 10px;

  width: 50%;
  /* margin-left: 1.5em; */
}
.vol-left-area h3 {
  text-align: center;
  font-size: 3rem;
  text-transform: uppercase;
  font-weight: 700;
  color: #ffffff;

  margin-top: 3.8em;
}
.vol-right-area {
  width: 50%;

  margin-left: 2.5em;
  margin-right: 2.5em;
}
.vol-right-area h2 {
  color: #121212;
  font-size: 2.4rem;
}
.vol-right-area h5 {
  font-size: 1.25rem;
  color: #484e59;
  font-weight: 700;
  margin-top: 0.8em;
  margin-bottom: 1.44em;
}
.vol-right-area p {
  font-size: 1.125em;
  color: #707070;
  max-width: 640px;
  max-height: 56px;
}
#rege-btn {
  padding-top: 4rem;
}
/* end of volunteer area */

/* get update area */
.get-update-area {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 40vh;
  padding: 2rem;
  margin-top: 6em;
}
.get-update-area h2 {
  font-style: normal;
  font-weight: 700;
  font-size: 45px;
  line-height: 54px;
  color: #121212;
}
.get-update-area p {
  width: 625px;
  height: 56px;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  color: #707070;
  margin-top: 1em;
}
.subscribe-area {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 4em;
}
.subscribe-button {
  text-decoration: none;
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  color: #ffffff;
  padding: 14px 12px;
  background: #ff5959;
  border-radius: 0px 5px 5px 0px;
}
.subscribe-field {
  background-color: #fff4d6;
  width: 850px;
  height: 200px;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.subscribe-value {
  width: 275px;
  height: 52px;
  background: #d9d9d9;
  border: none;
  border-radius: 5px 0px 0px 5px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #aa9f9f;
  padding-left: 10px;
  outline: none;
}
/* end of get update area */
/* footer area */
footer {
  background: #0b0d17;
  font-family: "Lobster Two", cursive;
  text-align: center;
  padding: 50px;
}
footer h2 {
  font-style: normal;
  font-weight: 400;
  font-size: 36px;
  line-height: 44px;
  color: #ff5959;
}
footer p {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: #d9dbe1;
}
/* end of footer area */

